--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.6"
+    "axios": "^0.18.0",
+    "vue": "^2.6.6",
+    "vue-good-table": "^2.16.3",
+    "vue-js-modal": "^1.3.28",
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
