--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "buefy": "^0.7.3",
     "vue": "^2.6.6",
     "vue-good-table": "^2.16.3",
-    "vue-js-modal": "^1.3.28",
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
